// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`libs/Stapsher/utils applyGeneratedFields generates new fields 1`] = `
{
  "author": "Samantha Groves",
  "email": "samantha@example.com",
  "url": "https://samantha.example.com",
  "content": "We might as well be a symphony",
  "role": "Analog Interface",
  "timestamp": 0
}
`;

exports[`libs/Stapsher/utils applyInternalFields adds internal fields 1`] = `
{
  "author": "Samantha Groves",
  "email": "samantha@example.com",
  "url": "https://samantha.example.com",
  "content": "We might as well be a symphony",
  "_id": "7w0.z3r0.7w0.53v3n"
}
`;

exports[`libs/Stapsher/utils applyTransforms throws error if hash algorithm is missing 1`] = `
{
  "code": "MISSING_HASH_ALGORITHM",
  "statusCode": 422,
  "cause": {
    "field": "email",
    "transform": "hash"
  }
}
`;

exports[`libs/Stapsher/utils applyTransforms transforms fields 1`] = `
{
  "author": "Samantha Groves",
  "email": "f948d4367793839ddc25da5d98c6166d",
  "url": "https://samantha.example.com",
  "content": "We might as well be a symphony"
}
`;

exports[`libs/Stapsher/utils generatePullRequestBody works as expected 1`] = `
"pull_request_introduction
| Field   | Value                          |
| ------- | ------------------------------ |
| author  | Samantha Groves                |
| email   | samantha@example.com           |
| url     | https://samantha.example.com   |
| content | We might as well be a symphony |"
`;

exports[`libs/Stapsher/utils getContentDump returns dump for format 1`] = `
"{
  \\"author\\": \\"Samantha Groves\\",
  \\"email\\": \\"samantha@example.com\\",
  \\"url\\": \\"https://samantha.example.com\\",
  \\"content\\": \\"We might as well be a symphony\\"
}"
`;

exports[`libs/Stapsher/utils getContentDump returns dump for format 2`] = `
"author: Samantha Groves
email: samantha@example.com
url: 'https://samantha.example.com'
content: We might as well be a symphony
"
`;

exports[`libs/Stapsher/utils getFormatExtension throws error if unsupported format 1`] = `
{
  "code": "UNSUPPORTED_FORMAT",
  "statusCode": 422,
  "cause": {
    "format": "snap"
  }
}
`;

exports[`libs/Stapsher/utils getNewFilePath uses extension 1`] = `"/test/path/data.comment.yml"`;

exports[`libs/Stapsher/utils getNewFilePath uses format to get fallback extension 1`] = `"/test/path/data.yaml"`;

exports[`libs/Stapsher/utils validateFields throws if fields not allowed 1`] = `
{
  "code": "FIELDS_NOT_ALLOWED",
  "statusCode": 400,
  "cause": {
    "notAllowedFields": [
      "rogue"
    ]
  }
}
`;

exports[`libs/Stapsher/utils validateFields throws if missing required fields 1`] = `
{
  "code": "MISSING_REQUIRED_FIELDS",
  "statusCode": 400,
  "cause": {
    "missingRequiredFields": [
      "email"
    ]
  }
}
`;
